--- a/iXBRLViewerPlugin/viewer/src/less/inspector.less
+++ b/iXBRLViewerPlugin/viewer/src/less/inspector.less
@@ -267,8 +267,9 @@
           position: absolute;
           top: 3.2rem;
           left: -2rem;
-          background: var(--colour-bg);
-          border: solid 1px var(--colour-text);
+          background: white;
+          color: black;
+          border: solid 1px black;
           border-radius: 0.3rem;
           line-height: 1.6rem;
 
@@ -278,10 +279,10 @@
             left: 1.1rem;
             width: 1.5rem;
             height: 1.5rem;
-            border-top: solid 0.1rem var(--colour-text);
-            border-left: solid 0.1rem var(--colour-text);
+            border-top: solid 0.1rem black;
+            border-left: solid 0.1rem black;
             transform: translate(50%, -50%) rotate(45deg);
-            background: var(--colour-bg);
+            background: white;
           }
 
           .item {
